[package]
name = "build_tools"
version = "0.1.0"
authors = [ "Parker TenBroeck" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-tools = { version = "0.1.1" }
build_utils = { path = "../build_utils" }
ssh2 = "*"